[package]
name = "JTetris"
version = "0.1.0"
authors = ["paussu <paussuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
rand = "0.8.3"